--- a/indeks.html
+++ b/indeks.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
- 	    <title>9.6_Zadanie_Manipulowanie_DOM_po_kliknieciu</title>
+ 	    <title>10.2_Zadanie_jQuery_w_praktyce</title>
     	<link rel="stylesheet" href="css/style.css">
-      <script src="jquery-1.12.4.min.js"></script>
+      <!--<script src="jquery-1.12.4.min.js"></script>-->
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script><script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"></script>')</script>
   </head>
   <body>
     <div>
